--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -155,6 +155,17 @@ This section provides details for each class and property defined by Mapping Qua
             <sup class="type-op" title="object property">op</sup>, <a href="#performedOn" title="https://alex-randles.github.io/MQV/#performedOn">performedOn</a>
             <sup class="type-op" title="object property">op</sup>
          </dd>
+         <dt>is disjoint with</dt>
+         <dd>
+            <a href="#MappingTool" title="https://alex-randles.github.io/MQV/#MappingTool">MappingTool</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingValidationReport"
+               title="https://alex-randles.github.io/MQV/#MappingValidationReport">MappingValidationReport</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingViolation"
+               title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#QualityRequirement"
+               title="https://alex-randles.github.io/MQV/#QualityRequirement">QualityRequirement</a>
+            <sup class="type-c" title="class">c</sup>
+         </dd>
       </dl>
    </div>
    <div class="entity" id="MappingRefinement">
@@ -260,6 +271,18 @@ This section provides details for each class and property defined by Mapping Qua
             <a href="#toolsUsed" title="https://alex-randles.github.io/MQV/#toolsUsed">toolsUsed</a>
             <sup class="type-op" title="object property">op</sup>
          </dd>
+         <dt>is disjoint with</dt>
+         <dd>
+            <a href="#MappingDocument"
+               title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingValidationReport"
+               title="https://alex-randles.github.io/MQV/#MappingValidationReport">MappingValidationReport</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingViolation"
+               title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#QualityRequirement"
+               title="https://alex-randles.github.io/MQV/#QualityRequirement">QualityRequirement</a>
+            <sup class="type-c" title="class">c</sup>
+         </dd>
       </dl>
    </div>
    <div class="entity" id="MappingValidationReport">
@@ -308,6 +331,17 @@ This section provides details for each class and property defined by Mapping Qua
             <a href="#hasValidationReport"
                title="https://alex-randles.github.io/MQV/#hasValidationReport">hasValidationReport</a>
             <sup class="type-op" title="object property">op</sup>
+         </dd>
+         <dt>is disjoint with</dt>
+         <dd>
+            <a href="#MappingDocument"
+               title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingTool" title="https://alex-randles.github.io/MQV/#MappingTool">MappingTool</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingViolation"
+               title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#QualityRequirement"
+               title="https://alex-randles.github.io/MQV/#QualityRequirement">QualityRequirement</a>
+            <sup class="type-c" title="class">c</sup>
          </dd>
       </dl>
    </div>
@@ -367,6 +401,17 @@ This section provides details for each class and property defined by Mapping Qua
             <sup class="type-op" title="object property">op</sup>, <a href="#refinedViolation"
                title="https://alex-randles.github.io/MQV/#refinedViolation">refinedViolation</a>
             <sup class="type-op" title="object property">op</sup>
+         </dd>
+         <dt>is disjoint with</dt>
+         <dd>
+            <a href="#MappingDocument"
+               title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingTool" title="https://alex-randles.github.io/MQV/#MappingTool">MappingTool</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingValidationReport"
+               title="https://alex-randles.github.io/MQV/#MappingValidationReport">MappingValidationReport</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#QualityRequirement"
+               title="https://alex-randles.github.io/MQV/#QualityRequirement">QualityRequirement</a>
+            <sup class="type-c" title="class">c</sup>
          </dd>
       </dl>
    </div>
@@ -454,6 +499,17 @@ This section provides details for each class and property defined by Mapping Qua
             <a href="#hasQualityRequirement"
                title="https://alex-randles.github.io/MQV/#hasQualityRequirement">hasQualityRequirement</a>
             <sup class="type-op" title="object property">op</sup>
+         </dd>
+         <dt>is disjoint with</dt>
+         <dd>
+            <a href="#MappingDocument"
+               title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingTool" title="https://alex-randles.github.io/MQV/#MappingTool">MappingTool</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingValidationReport"
+               title="https://alex-randles.github.io/MQV/#MappingValidationReport">MappingValidationReport</a>
+            <sup class="type-c" title="class">c</sup>, <a href="#MappingViolation"
+               title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
+            <sup class="type-c" title="class">c</sup>
          </dd>
       </dl>
    </div>
@@ -1239,6 +1295,9 @@ This section provides details for each class and property defined by Mapping Qua
          </dd>
       </dl>
       <div class="description">
+         <p>
+            <strong>has characteristics:
+                </strong> transitive</p>
          <dl>
             <dt>has domain</dt>
             <dd>
