--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -50,12 +50,6 @@ This ontology has the following classes and properties.</span>
       <a href="#executes" title="https://alex-randles.github.io/MQV/#executes">executes</a>
    </li>
    <li>
-      <a href="#hasLiteralValue"
-         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
-         <span>hasLiteralValue</span>
-      </a>
-   </li>
-   <li>
       <a href="#hasMetricType"
          title="https://alex-randles.github.io/MQV/#hasMetricType">hasMetricType</a>
    </li>
@@ -142,9 +136,7 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#hasLiteralValue"
-         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
-         <span>hasLiteralValue</span>
-      </a>
+         title="https://alex-randles.github.io/MQV/#hasLiteralValue">hasLiteralValue</a>
    </li>
    <li>
       <a href="#hasLocation" title="https://alex-randles.github.io/MQV/#hasLocation">hasLocation</a>
