--- a/index-en.html
+++ b/index-en.html
@@ -76,7 +76,7 @@ function loadTOC(){
 </div>
 <div class="status">
 <div>
-<span>Ontology Specification Draft</span>
+<span>Draft</span>
 </div>
 </div>     <div id="abstract"></div>
 <div id="toc"></div>     <div id="introduction"></div>
