--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -7,19 +7,32 @@ This is a place holder text for the introduction. The introduction should briefl
 <table>
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
-<tr><td><b>mqv</b></td><td>&lt;https://alex-randles.github.io/MQV/#&gt;</td></tr>
+<tr><td><b>cdo</b></td><td>&lt;https://change-detection-ontology.adaptcentre.ie/#&gt;</td></tr>
 <tr><td></td><td></td></tr>
+<tr><td><b>rei-meta-policy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiMetaPolicy.owl&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
-<tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
-<tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
-<tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
-<tr><td><b>dqv</b></td><td>&lt;http://www.w3.org/ns/dqv&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
-<tr><td><b>bibo</b></td><td>&lt;http://purl.org/ontology/bibo&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
+<tr><td><b>geo</b></td><td>&lt;http://www.w3.org/2003/01/geo/wgs84_pos&gt;</td></tr>
+<tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
+<tr><td><b>rei-constraint</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
-<tr><td><b>prov</b></td><td>&lt;http://www.w3.org/ns/prov&gt;</td></tr>
+<tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
+<tr><td><b>crm</b></td><td>&lt;http://www.cidoc-crm.org/cidoc-crm&gt;</td></tr>
+<tr><td><b>rei-entity</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiEntity.owl&gt;</td></tr>
+<tr><td><b>cc</b></td><td>&lt;http://web.resource.org/cc&gt;</td></tr>
+<tr><td><b>dcterm</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
+<tr><td><b>ev</b></td><td>&lt;http://purl.org/NET/c4dm/event.owl&gt;</td></tr>
+<tr><td><b>ex</b></td><td>&lt;http://example.org&gt;</td></tr>
+<tr><td><b>rei-denontic</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl&gt;</td></tr>
+<tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
+<tr><td><b>lode</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
+<tr><td><b>dctype</b></td><td>&lt;http://purl.org/dc/dcmitype&gt;</td></tr>
+<tr><td><b>dul</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
+<tr><td><b>rei-action</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiAction.owl&gt;</td></tr>
+<tr><td><b>time</b></td><td>&lt;http://www.w3.org/2006/time&gt;</td></tr>
+<tr><td><b>rei-policy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
 </tbody>
 </table>
 </div>
