--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -1,118 +1,174 @@
-<h2 id="overv" class="list">Change Detection Ontology: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">Mapping Quality Vocabulary: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#ChangeLog"
-         title="https://change-detection-ontology.adaptcentre.ie/#ChangeLog">cdo:EventLog</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingAssessment"
+         title="https://alex-randles.github.io/MQV/#MappingAssessment">MappingAssessment</a>
    </li>
    <li>
-      <a href="#DatatypeSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#DatatypeSourceData">DatatypeSourceData</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingDocument"
+         title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
    </li>
    <li>
-      <a href="#DeleteSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#DeleteSourceData">DeleteSourceData</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingRefinement"
+         title="https://alex-randles.github.io/MQV/#MappingRefinement">MappingRefinement</a>
    </li>
    <li>
-      <a href="#http://linkedevents.org/ontology/Event" title="http://linkedevents.org/ontology/Event">Event</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingTool" title="https://alex-randles.github.io/MQV/#MappingTool">MappingTool</a>
    </li>
    <li>
-      <a href="#InsertSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#InsertSourceData">InsertSourceData</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingValidationReport"
+         title="https://alex-randles.github.io/MQV/#MappingValidationReport">MappingValidationReport</a>
    </li>
    <li>
-      <a href="#MergeSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#MergeSourceData">MergeSourceData</a>
+      <a href="#https://alex-randles.github.io/MQV/#MappingViolation"
+         title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
    </li>
    <li>
-      <a href="#MoveSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#MoveSourceData">MoveSourceData</a>
+      <a href="#https://alex-randles.github.io/MQV/#QualityMetricType"
+         title="https://alex-randles.github.io/MQV/#QualityMetricType">QualityMetricType</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#QualityRequirement"
+         title="https://alex-randles.github.io/MQV/#QualityRequirement">QualityRequirement</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#http://linkedevents.org/ontology/atPlace" title="http://linkedevents.org/ontology/atPlace">at place</a>
+      <a href="#https://alex-randles.github.io/MQV/#assessedMapping"
+         title="https://alex-randles.github.io/MQV/#assessedMapping">assessedMapping</a>
    </li>
    <li>
-      <a href="#http://linkedevents.org/ontology/atTime" title="http://linkedevents.org/ontology/atTime">at time</a>
+      <a href="#https://alex-randles.github.io/MQV/#assessmentPerformedBy"
+         title="https://alex-randles.github.io/MQV/#assessmentPerformedBy">assessmentPerformedBy</a>
    </li>
    <li>
-      <a href="#hasEvent"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
+      <a href="#https://alex-randles.github.io/MQV/#createdBy" title="https://alex-randles.github.io/MQV/#createdBy">createdBy</a>
    </li>
    <li>
-      <a href="#hasOwner"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
+      <a href="#https://alex-randles.github.io/MQV/#executes" title="https://alex-randles.github.io/MQV/#executes">executes</a>
    </li>
    <li>
-      <a href="#inEventLog"
-         title="https://change-detection-ontology.adaptcentre.ie/#inEventLog">inEventLog</a>
+      <a href="#https://alex-randles.github.io/MQV/#hasMetricType"
+         title="https://alex-randles.github.io/MQV/#hasMetricType">hasMetricType</a>
    </li>
    <li>
-      <a href="#http://linkedevents.org/ontology/involvedAgent" title="http://linkedevents.org/ontology/involvedAgent">involved agent</a>
+      <a href="#https://alex-randles.github.io/MQV/#hasQualityMeasurement"
+         title="https://alex-randles.github.io/MQV/#hasQualityMeasurement">hasQualityMeasurement</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasQualityRequirement"
+         title="https://alex-randles.github.io/MQV/#hasQualityRequirement">hasQualityRequirement</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasRefinement"
+         title="https://alex-randles.github.io/MQV/#hasRefinement">hasRefinement</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasValidationReport"
+         title="https://alex-randles.github.io/MQV/#hasValidationReport">hasValidationReport</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasLiteralValue"
+         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
+         <span>hasValue</span>
+      </a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasObjectValue"
+         title="https://alex-randles.github.io/MQV/#hasObjectValue">hasValue</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasViolation" title="https://alex-randles.github.io/MQV/#hasViolation">hasViolation</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#inTripleMap" title="https://alex-randles.github.io/MQV/#inTripleMap">inTripleMap</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#isDescribedBy"
+         title="https://alex-randles.github.io/MQV/#isDescribedBy">isDescribedBy</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#mappingPurpose"
+         title="https://alex-randles.github.io/MQV/#mappingPurpose">
+         <span>mappingPurpose</span>
+      </a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#mappingSource"
+         title="https://alex-randles.github.io/MQV/#mappingSource">mappingSource</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#performedBy" title="https://alex-randles.github.io/MQV/#performedBy">performedBy</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#performedOn" title="https://alex-randles.github.io/MQV/#performedOn">performedOn</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#refinedViolation"
+         title="https://alex-randles.github.io/MQV/#refinedViolation">refinedViolation</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#refinementName"
+         title="https://alex-randles.github.io/MQV/#refinementName">
+         <span>refinementName</span>
+      </a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#refinementPerformedBy"
+         title="https://alex-randles.github.io/MQV/#refinementPerformedBy">refinementPerformedBy</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#resultMessage"
+         title="https://alex-randles.github.io/MQV/#resultMessage">
+         <span>resultMessage</span>
+      </a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#toolsUsed" title="https://alex-randles.github.io/MQV/#toolsUsed">toolsUsed</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#wasDerivedFrom"
+         title="https://alex-randles.github.io/MQV/#wasDerivedFrom">wasDerivedFrom</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#wasRefinedBy" title="https://alex-randles.github.io/MQV/#wasRefinedBy">wasRefinedBy</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#hasReason"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasReason">
-         <span>has reason</span>
-      </a>
-   </li>
-</ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
-   <li>
-      <a href="#http://example.org/detectionTime" title="http://example.org/detectionTime">
-         <span>detection time</span>
-      </a>
+      <a href="#https://alex-randles.github.io/MQV/#hasConfidenceScore"
+         title="https://alex-randles.github.io/MQV/#hasConfidenceScore">hasConfidenceScore</a>
    </li>
    <li>
-      <a href="#http://example.org/eventLog" title="http://example.org/eventLog">
-         <span>event log</span>
-      </a>
+      <a href="#https://alex-randles.github.io/MQV/#hasLocation" title="https://alex-randles.github.io/MQV/#hasLocation">hasLocation</a>
    </li>
    <li>
-      <a href="#http://example.org/insertEvent1" title="http://example.org/insertEvent1">
-         <span>insert event1</span>
+      <a href="#https://alex-randles.github.io/MQV/#hasRefinementQuery"
+         title="https://alex-randles.github.io/MQV/#hasRefinementQuery">hasRefinementQuery</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasLiteralValue"
+         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
+         <span>hasValue</span>
       </a>
    </li>
    <li>
-      <a href="#http://example.org/insertEvent2" title="http://example.org/insertEvent2">
-         <span>insert event2</span>
+      <a href="#https://alex-randles.github.io/MQV/#mappingPurpose"
+         title="https://alex-randles.github.io/MQV/#mappingPurpose">
+         <span>mappingPurpose</span>
       </a>
    </li>
    <li>
-      <a href="#http://example.org/notificationConstraint" title="http://example.org/notificationConstraint">
-         <span>notification constraint</span>
+      <a href="#https://alex-randles.github.io/MQV/#refinementName"
+         title="https://alex-randles.github.io/MQV/#refinementName">
+         <span>refinementName</span>
       </a>
    </li>
    <li>
-      <a href="#http://example.org/notificationPolicy" title="http://example.org/notificationPolicy">
-         <span>notification policy</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://example.org/policyObligation" title="http://example.org/policyObligation">
-         <span>policy obligation</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://example.org/sendNotificationAction" title="http://example.org/sendNotificationAction">
-         <span>send notification action</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://example.org/softwareAgent" title="http://example.org/softwareAgent">
-         <span>software agent</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://example.org/sourceData" title="http://example.org/sourceData">
-         <span>source data</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://example.org/userAgent" title="http://example.org/userAgent">
-         <span>user agent</span>
+      <a href="#https://alex-randles.github.io/MQV/#resultMessage"
+         title="https://alex-randles.github.io/MQV/#resultMessage">
+         <span>resultMessage</span>
       </a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
