--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -50,8 +50,16 @@ This ontology has the following classes and properties.</span>
       <a href="#https://alex-randles.github.io/MQV/#executes" title="https://alex-randles.github.io/MQV/#executes">executes</a>
    </li>
    <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasLiteralValue"
+         title="https://alex-randles.github.io/MQV/#hasLiteralValue">hasLiteralValue</a>
+   </li>
+   <li>
       <a href="#https://alex-randles.github.io/MQV/#hasMetricType"
          title="https://alex-randles.github.io/MQV/#hasMetricType">hasMetricType</a>
+   </li>
+   <li>
+      <a href="#https://alex-randles.github.io/MQV/#hasObjectValue"
+         title="https://alex-randles.github.io/MQV/#hasObjectValue">hasObjectValue</a>
    </li>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#hasQualityMeasurement"
@@ -70,16 +78,6 @@ This ontology has the following classes and properties.</span>
          title="https://alex-randles.github.io/MQV/#hasValidationReport">hasValidationReport</a>
    </li>
    <li>
-      <a href="#https://alex-randles.github.io/MQV/#hasLiteralValue"
-         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
-         <span>hasValue</span>
-      </a>
-   </li>
-   <li>
-      <a href="#https://alex-randles.github.io/MQV/#hasObjectValue"
-         title="https://alex-randles.github.io/MQV/#hasObjectValue">hasValue</a>
-   </li>
-   <li>
       <a href="#https://alex-randles.github.io/MQV/#hasViolation" title="https://alex-randles.github.io/MQV/#hasViolation">hasViolation</a>
    </li>
    <li>
@@ -88,12 +86,6 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#isDescribedBy"
          title="https://alex-randles.github.io/MQV/#isDescribedBy">isDescribedBy</a>
-   </li>
-   <li>
-      <a href="#https://alex-randles.github.io/MQV/#mappingPurpose"
-         title="https://alex-randles.github.io/MQV/#mappingPurpose">
-         <span>mappingPurpose</span>
-      </a>
    </li>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#mappingSource"
@@ -110,20 +102,8 @@ This ontology has the following classes and properties.</span>
          title="https://alex-randles.github.io/MQV/#refinedViolation">refinedViolation</a>
    </li>
    <li>
-      <a href="#https://alex-randles.github.io/MQV/#refinementName"
-         title="https://alex-randles.github.io/MQV/#refinementName">
-         <span>refinementName</span>
-      </a>
-   </li>
-   <li>
       <a href="#https://alex-randles.github.io/MQV/#refinementPerformedBy"
          title="https://alex-randles.github.io/MQV/#refinementPerformedBy">refinementPerformedBy</a>
-   </li>
-   <li>
-      <a href="#https://alex-randles.github.io/MQV/#resultMessage"
-         title="https://alex-randles.github.io/MQV/#resultMessage">
-         <span>resultMessage</span>
-      </a>
    </li>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#toolsUsed" title="https://alex-randles.github.io/MQV/#toolsUsed">toolsUsed</a>
@@ -148,27 +128,15 @@ This ontology has the following classes and properties.</span>
          title="https://alex-randles.github.io/MQV/#hasRefinementQuery">hasRefinementQuery</a>
    </li>
    <li>
-      <a href="#https://alex-randles.github.io/MQV/#hasLiteralValue"
-         title="https://alex-randles.github.io/MQV/#hasLiteralValue">
-         <span>hasValue</span>
-      </a>
-   </li>
-   <li>
       <a href="#https://alex-randles.github.io/MQV/#mappingPurpose"
-         title="https://alex-randles.github.io/MQV/#mappingPurpose">
-         <span>mappingPurpose</span>
-      </a>
+         title="https://alex-randles.github.io/MQV/#mappingPurpose">mappingPurpose</a>
    </li>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#refinementName"
-         title="https://alex-randles.github.io/MQV/#refinementName">
-         <span>refinementName</span>
-      </a>
+         title="https://alex-randles.github.io/MQV/#refinementName">refinementName</a>
    </li>
    <li>
       <a href="#https://alex-randles.github.io/MQV/#resultMessage"
-         title="https://alex-randles.github.io/MQV/#resultMessage">
-         <span>resultMessage</span>
-      </a>
+         title="https://alex-randles.github.io/MQV/#resultMessage">resultMessage</a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
